feat: Implement Carousel Image Management
- Added CarouselImage entity with properties for filename and display order.
- Created CarouselImageType form for image upload and ordering.
- Developed CarouselImageController for CRUD operations on carousel images.
- Implemented image upload functionality with unique filename generation.
- Added routes for listing, creating, editing, and deleting carousel images.
- Created Twig templates for displaying, editing, and managing carousel images.
- Introduced ReservationStatus enum for managing reservation states.
- Enhanced user experience with flash messages and confirmation dialogs.

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -21,9 +21,12 @@
 					<p>"Ne laissez pas votre date s'envoler. Réservez la Salle de la Thérésiére maintenant  !"</p>
 				</section>
 			</a>
+			
+			<a href="{{ path('app_carousel_image_index') }}" class="lien-bloc">
 			<section id="bloc4">
 				<p>"Simplicité et efficacité. Profitez d'une cuisine équipéé, de sanitaires soignés et d'un accès PMR à la Salle de la Thérésiére, un lieu conçu pour tous."</p>
 			</section>
+			</a>
 			<section id="bloc5">
 				<p>"Ce qui se passe à la Salle de la Thérésiére : découvrez nos actualités."</p>
 			</section>
