--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -21,12 +21,15 @@
 					<p>"Ne laissez pas votre date s'envoler. Réservez la Salle de la Thérésiére maintenant  !"</p>
 				</section>
 			</a>
-			
+			{% if is_granted('ROLE_ADMIN') %}
 			<a href="{{ path('app_carousel_image_index') }}" class="lien-bloc">
+			{% elseif is_granted('ROLE_USER') %}
+			<a href="{{ path('app_carousel_image_public') }}" class="lien-bloc">
 			<section id="bloc4">
 				<p>"Simplicité et efficacité. Profitez d'une cuisine équipéé, de sanitaires soignés et d'un accès PMR à la Salle de la Thérésiére, un lieu conçu pour tous."</p>
 			</section>
 			</a>
+			{% endif %}
 			<section id="bloc5">
 				<p>"Ce qui se passe à la Salle de la Thérésiére : découvrez nos actualités."</p>
 			</section>
