--- a/templates/layout/footer.html.twig
+++ b/templates/layout/footer.html.twig
@@ -12,7 +12,7 @@
 		<div class="footer-contact-info">
 			<div class="logo-container">
 				<a href="{{ path('app_home') }}">
-					<img class="logo-container" src="{{ asset('img/logo.png') }}" alt="Logo de SCI LA THÉRÈSIÈRE">
+					<img src="{{ asset('img/logo.png') }}" alt="Logo de SCI LA THÉRÈSIÈRE">
 				</a>
 			</div>
 			<p>
